Fix minor misalignment in mobile menu

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ h2 {
 
 header {
     display: grid;
-    grid-template-columns: auto 3rem;
+    grid-template-columns: auto 3.5rem;
     grid-column-gap: .5rem;
 }
 
@@ -53,7 +53,7 @@ nav li {
 nav input:checked ~ ul {
     display: block;
     width: calc(100% - 4rem);
-    right: 0;
+    right: -.5rem;
     background: rgba(247, 247, 247, 0.9);
     position: absolute;
 }
